CHANGELOG

UNRELEASED
  * FEATURE : (breaking) Move callback style to a event based API
  * FEATURE : isDisjunctiveRefined to check if a disjunctive facet is refined
  * REFACTORING : constructor, now expose the defaults
  * TESTS : defaults test

1.0.0
  * Extraction of the helper from the algolia-client-js v2.9.4
  * FEATURE: CommonJS compatibility
  * FEATURE: UMD builds in dist/
  * TESTS: Some basic tests